Fixed header icon reacting to scrollbar width

--- a/src/assets/styles/customProperties.css
+++ b/src/assets/styles/customProperties.css
@@ -58,30 +58,30 @@
 
   /* ------------------------------- Spacing ------------------------------ */
 
-  /* @link https://utopia.fyi/space/calculator?c=375,16,1.2,1240,16,1.25,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-3xl&g=s,l,xl,12 */
+  /* @link https://utopia.fyi/space/calculator?c=375,16,1.2,1280,16,1.25,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
 
   --space-3xs: clamp(0.25rem, calc(0.25rem + 0vw), 0.25rem);
   --space-2xs: clamp(0.5rem, calc(0.5rem + 0vw), 0.5rem);
   --space-xs: clamp(0.75rem, calc(0.75rem + 0vw), 0.75rem);
   --space-s: clamp(1rem, calc(1rem + 0vw), 1rem);
   --space-m: clamp(1.5rem, calc(1.5rem + 0vw), 1.5rem);
-  --space-l: clamp(2rem, calc(2rem + 0vw), 2.5rem);
+  --space-l: clamp(2rem, calc(2rem + 0vw), 2rem);
   --space-xl: clamp(3rem, calc(3rem + 0vw), 3rem);
   --space-2xl: clamp(4rem, calc(4rem + 0vw), 4rem);
   --space-3xl: clamp(6rem, calc(6rem + 0vw), 6rem);
 
   /* One-up pairs */
-  --space-3xs-2xs: clamp(0.25rem, calc(0.14rem + 0.46vw), 0.5rem);
-  --space-2xs-xs: clamp(0.5rem, calc(0.39rem + 0.46vw), 0.75rem);
-  --space-xs-s: clamp(0.75rem, calc(0.64rem + 0.46vw), 1rem);
-  --space-s-m: clamp(1rem, calc(0.78rem + 0.92vw), 1.5rem);
-  --space-m-l: clamp(1.5rem, calc(1.28rem + 0.92vw), 2.5rem);
-  --space-l-xl: clamp(2rem, calc(1.57rem + 1.85vw), 3rem);
-  --space-xl-2xl: clamp(3rem, calc(2.57rem + 1.85vw), 4rem);
-  --space-2xl-3xl: clamp(4rem, calc(3.13rem + 3.7vw), 6rem);
+  --space-3xs-2xs: clamp(0.25rem, calc(0.15rem + 0.44vw), 0.5rem);
+  --space-2xs-xs: clamp(0.5rem, calc(0.4rem + 0.44vw), 0.75rem);
+  --space-xs-s: clamp(0.75rem, calc(0.65rem + 0.44vw), 1rem);
+  --space-s-m: clamp(1rem, calc(0.79rem + 0.88vw), 1.5rem);
+  --space-m-l: clamp(1.5rem, calc(1.29rem + 0.88vw), 2rem);
+  --space-l-xl: clamp(2rem, calc(1.59rem + 1.77vw), 3rem);
+  --space-xl-2xl: clamp(3rem, calc(2.59rem + 1.77vw), 4rem);
+  --space-2xl-3xl: clamp(4rem, calc(3.17rem + 3.54vw), 6rem);
 
   /* Custom pairs */
-  --space-s-l: clamp(1rem, calc(0.57rem + 1.85vw), 2rem);
+  --space-s-l: clamp(1rem, calc(0.59rem + 1.77vw), 2rem);
 
   /* ---------------------------------------------------------------------- */
   /*                                  Fonts                                 */
